--- a/robot_localization/params/ogv_kf_params.yaml
+++ b/robot_localization/params/ogv_kf_params.yaml
@@ -59,7 +59,7 @@ debug_out_file: /path/to/debug/file.txt
 map_frame: map              # Defaults to "map" if unspecified  # CHECK IF RTABMAP CAN PROVIDE THIS
 odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
-world_frame: map           # Defaults to the value of odom_frame if unspecified. LEAVE IT AS ODOM UNTIL DARPA FRAME INTEGRATION HAPPENS
+world_frame: odom           # Defaults to the value of odom_frame if unspecified. LEAVE IT AS ODOM UNTIL DARPA FRAME INTEGRATION HAPPENS
 
 
 
@@ -73,7 +73,7 @@ world_frame: map           # Defaults to the value of odom_frame if unspecified.
 # sensor_msgs/Imu). To add an input, simply append the next number in the sequence to its "base" name, e.g., odom0,
 # odom1, twist0, twist1, imu0, imu1, imu2, etc. The value should be the topic name. These parameters obviously have no
 # default values, and must be specified.
-odom0: /rf2o_odom
+odom0: /odom_rf2o
 
 # Each sensor reading updates some or all of the filter's state. These options give you greater control over which
 # values from each measurement are fed to the filter. For example, if you have an odometry message as input, but only
