--- a/teensy_bridge/package.xml
+++ b/teensy_bridge/package.xml
@@ -51,6 +51,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>wireless_msgs</build_depend>
+  <depend>tf</depend>
+
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>wireless_msgs</exec_depend>
