--- a/simple_obstacle_avoidance/config/move_base_ogv.yml
+++ b/simple_obstacle_avoidance/config/move_base_ogv.yml
@@ -62,26 +62,27 @@ global_costmap:
         frontier_travel_point: "middle"
         explore_clear_space: false
     inflation:
-        inflation_radius: 0.15
+        inflation_radius: 0.3
+        cost_scaling_factor: 3.0
       
 
 DWAPlannerROS:
-     max_vel_x: 0.15
-     min_vel_x: -0.1
-     max_vel_theta: 0.1
-     min_in_place_vel_theta: 0.1
-     min_vel_y: 0
-     max_vel_y: 0
+    max_vel_x: 0.2
+    min_vel_x: -0.1
+    max_vel_theta: 0.1
+    min_in_place_vel_theta: 0.1
+    min_vel_y: 0
+    max_vel_y: 0
  #    
-     acc_lim_theta: 3.0
-     acc_lim_x: 3.0
-     acc_lim_y: 0.0
+    acc_lim_theta: 3.0
+    acc_lim_x: 3.0
+    acc_lim_y: 0.0
  #
-     xy_goal_tolerance: 0.5
-     yaw_goal_tolerance: 0.10
-     holonomic_robot: false
-     occ_dist_scale: 10
-     forward_point_distance: 0
-     #path_distance_bias: 100
-     #pdist_scale: 0.1
-     #gdist_scale: 0.5
+    xy_goal_tolerance: 0.5
+    yaw_goal_tolerance: 0.10
+    holonomic_robot: false
+    occ_dist_scale: 10
+    forward_point_distance: 0
+    #path_distance_bias: 100
+    #pdist_scale: 0.1
+    #gdist_scale: 0.5
