--- a/robot_localization/params/ogv_kf_params.yaml
+++ b/robot_localization/params/ogv_kf_params.yaml
@@ -73,20 +73,13 @@ world_frame: odom           # Defaults to the value of odom_frame if unspecified
 # sensor_msgs/Imu). To add an input, simply append the next number in the sequence to its "base" name, e.g., odom0,
 # odom1, twist0, twist1, imu0, imu1, imu2, etc. The value should be the topic name. These parameters obviously have no
 # default values, and must be specified.
-odom0: /odom_rf2o
 
-# Each sensor reading updates some or all of the filter's state. These options give you greater control over which
-# values from each measurement are fed to the filter. For example, if you have an odometry message as input, but only
-# want to use its Z position value, then set the entire vector to false, except for the third entry. The order of the
-# values is x, y, z, roll, pitch, yaw, vx, vy, vz, vroll, vpitch, vyaw, ax, ay, az. Note that not some message types
-# do not provide some of the state variables estimated by the filter. For example, a TwistWithCovarianceStamped message
-# has no pose information, so the first six values would be meaningless in that case. Each vector defaults to all false
-# if unspecified, effectively making this parameter required for each sensor.
-odom0_config: [false,  false,  false,
-               false, false, false,
-               true, true, false,
-               false, false, true,
-               false, false, false]
+#odom0: /odom_rf2o
+#odom0_config: [false,  false,  false,
+#               false, false, true,
+#               true, false, false,
+#               false, false, true,
+#               false, false, false]
 
 # If you have high-frequency data or are running with a low frequency parameter value, then you may want to increase
 # the size of the subscription queue so that more measurements are fused.
@@ -115,43 +108,39 @@ odom0_relative: true
 
 
 
-                        ############# OGV WHEEL ODOM PARAMS #############
+                        ############# OGV RTABMAP ODiOM PARAMS #############
 
 
-odom1: /ogv_wheel_odom
+odom1: /rtab/odom
 
-odom1_config: [true,  true,  false,
-               false, false, false,
-               false, false, false,
-               false, false, true,
-               false, false, false]
+odom1_config: [true, true, true,
+               true, true, true,
+               true, true, true,
+               true, true, true,
+               true, true, true]
 
 odom1_queue_size: 5
 
-odom1_differential: true
+odom1_differential: false
+
+odom1_relative: true
 
 
+      ############# OGV WHEEL ODOM PARAMS #############
 
-                      ############## OGV REALSENSE IMU PARAMS ###################
 
+# odom2: /ogv_wheel_odom
 
-imu0: /camera/imu_fused
-imu0_config: [false, false, false,
-              true,  true,  true,
-              false,  false,  false,
-              true,  true,  true,
-              false,  false,  false]
-imu0_nodelay: false
-imu0_differential: true
-imu0_relative: false
-imu0_queue_size: 5
-imu0_pose_rejection_threshold: 0.8                 # Note the difference in parameter names
-imu0_twist_rejection_threshold: 0.8                #
-imu0_linear_acceleration_rejection_threshold: 0.8  #
+# odom2_config: [true,  true,  false,
+#                false, false, false,
+#                false, false, false,
+#                false, false, true,
+#                false, false, false]
 
-# [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
-# this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
-imu0_remove_gravitational_acceleration: true
+# odom2_queue_size: 5
+
+# odom2_differential: true
+
 
 # [ADVANCED]  The EKF and UKF models follow a standard predict/correct cycle. During prediction, if there is no
 # acceleration reference, the velocity at time t+1 is simply predicted to be the same as the velocity at time t. During
@@ -165,7 +154,7 @@ imu0_remove_gravitational_acceleration: true
 # predicition. Note that if an acceleration measurement for the variable in question is available from one of the
 # inputs, the control term will be ignored.
 # Whether or not we use the control input during predicition. Defaults to false.
-use_control: false
+use_control: true
 # Whether the input (assumed to be cmd_vel) is a geometry_msgs/Twist or geometry_msgs/TwistStamped message. Defaults to
 # false.
 stamped_control: false
