--- a/simple_obstacle_avoidance/config/move_base_ogv.yml
+++ b/simple_obstacle_avoidance/config/move_base_ogv.yml
@@ -5,7 +5,7 @@ oscillation_timeout: 10
 controller_frequency: 5
 
 local_costmap:
-    global_frame: odom
+    global_frame: map
     robot_base_frame: base_link
     update_frequency: 6.0
     publish_frequency: 2.0
@@ -20,7 +20,7 @@ local_costmap:
     publish_frequency: 5
     plugins:
         - {name: obstacles_laser,     type: "costmap_2d::ObstacleLayer"}
-        - {name: obstacles_realsense,     type: "costmap_2d::ObstacleLayer"}
+        # - {name: obstacles_realsense,     type: "costmap_2d::ObstacleLayer"}
         - {name: inflation,        type: "costmap_2d::InflationLayer"}
     obstacles_laser:
         observation_sources: laser
@@ -28,8 +28,8 @@ local_costmap:
             raytrace_range: 20, inf_is_valid: true}
     obstacles_realsense:
         observation_sources: realsense
-        realsense: {data_type: PointCloud2, clearing: true, marking: true, topic: /camera/depth_registered/points, obstacle_range: 8.0,
-            raytrace_range: 8.0, inf_is_valid: false}
+        realsense: {data_type: PointCloud2, clearing: true, marking: true, topic: /camera/depth/color/points, obstacle_range: 8.0,
+        raytrace_range: 8.0, inf_is_valid: false, min_obstacle_height: -0.10}
     explore_boundary:
         resize_to_boundary: false
         frontier_travel_point: "middle"
@@ -38,7 +38,7 @@ local_costmap:
         inflation_radius: 0.15
 
 global_costmap:
-    global_frame: odom
+    global_frame: map
     robot_base_frame: base_link
     update_frequency: 5.0
     publish_frequency: 2.0
@@ -69,8 +69,8 @@ global_costmap:
 DWAPlannerROS:
     max_vel_x: 0.2
     min_vel_x: -0.1
-    max_vel_theta: 0.1
-    min_in_place_vel_theta: 0.1
+    max_vel_theta: 0.13
+    min_in_place_vel_theta: 0.13
     min_vel_y: 0
     max_vel_y: 0
  #    
