--- a/phy_planner/package.xml
+++ b/phy_planner/package.xml
@@ -56,9 +56,11 @@
   <exec_depend>message_runtime</exec_depend>
   <build_depend>roscpp</build_depend>
   <exec_depend>roscpp</exec_depend>
+  <build_depend>rviz</build_depend>
+  <exec_depend>rviz</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <rviz plugin="${prefix}/plugin_description.xml"/>
   </export>
 </package>
