--- a/amapper/CMakeLists.txt
+++ b/amapper/CMakeLists.txt
@@ -183,6 +183,12 @@ add_executable(laser_scan_example src/examples/local_laser_scan_based_map.cpp)
 add_dependencies(laser_scan_example ${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 ## Specify libraries to link a library or executable target against
 
+target_link_libraries(${PROJECT_NAME}
+   ${catkin_LIBRARIES}
+   ${PCL_COMMON_LIBRARIES}
+)
+
+
 target_link_libraries(laser_scan_example
    ${catkin_LIBRARIES}
    ${PCL_COMMON_LIBRARIES}
@@ -198,7 +204,6 @@ target_link_libraries(elevation_rviz
    Qt5::Widgets
    Qt5::Gui
    Qt5::PrintSupport
-   
 )
 #############
 ## Install ##
