--- a/map_merge/CMakeLists.txt
+++ b/map_merge/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_ros
   roscpp
   amapper
+  geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
