--- a/map_merge/package.xml
+++ b/map_merge/package.xml
@@ -56,6 +56,7 @@
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <depend>amapper</depend>
+  <depend>geometry_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
