--- a/loam_velodyne/.vscode/settings.json
+++ b/loam_velodyne/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "cmath": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "cstddef": "cpp",
+        "limits": "cpp"
     }
 }
