--- a/phy_planner/package.xml
+++ b/phy_planner/package.xml
@@ -59,6 +59,7 @@
   <build_depend>rviz</build_depend>
   <exec_depend>rviz</exec_depend>
   <depend>costmap_2d</depend>
+  <depend>pcl_ros</depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
