--- a/ugv_obstacle_avoidance/CMakeLists.txt
+++ b/ugv_obstacle_avoidance/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(point_cloud_preprocess)
+project(ugv_obstacle_avoidance)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -150,7 +150,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/point_cloud_preprocess_node.cpp)
+add_executable(${PROJECT_NAME}_node src/ugv_obstacle_avoidance_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
