--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ before_script:
 # non-zero when a test fails (which notifies Travis the build failed).
 script:
   - source /opt/ros/$ROS_DISTRO/setup.bash
-  - roscore && SERVER_PID=$!
+  - roscore && SERVER_PID=$! &
   - cd ~/catkin_ws
   - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
   # Run the tests, ensuring the path is set correctly.
