--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install dpkg
   - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-desktop-full ros-$ROS_DISTRO-rosserial ros-$ROS_DISTRO-rosserial-arduino ros-$ROS_DISTRO-apriltag-ros 
-  - sudo apt-get install -y ros-$ROS_DISTRO-teleop-twist-keyboard ros-$ROS_DISTRO-move-base libfftw3-dev
+  - sudo apt-get install -y ros-$ROS_DISTRO-teleop-twist-keyboard ros-$ROS_DISTRO-move-base libfftw3-dev libqt5charts5-dev
   - source /opt/ros/$ROS_DISTRO/setup.bash
 
 # Create a catkin workspace with the package under integration.
@@ -74,5 +74,5 @@ script:
   - catkin_make $( [ -f $CATKIN_OPTIONS ] && cat $CATKIN_OPTIONS )
   # Run the tests, ensuring the path is set correctly.
   - source devel/setup.bash
-  - catkin_make run_tests_amapper run_tests_data_compresor run_tests_teensy_bridge && catkin_test_results
+  - catkin_make run_tests
   #- kill -9 $SERVER_PID
