--- a/ugv_obstacle_avoidance/package.xml
+++ b/ugv_obstacle_avoidance/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>ugv_obstacle_avoidance</name>
   <version>0.0.0</version>
-  <description>The loam_tf_fixer package</description>
+  <description>The localisation and navigation package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -56,7 +56,7 @@
 <build_depend>geometry_msgs</build_depend>
 <build_depend>pcl</build_depend>
 <build_depend>pcl_ros</build_depend>
-
+<build_depend>graph_msgs</build_depend>
 <build_depend>pcl_conversions</build_depend>
 <build_depend>tf2_ros</build_depend>
 <build_depend>tf2</build_depend>
@@ -68,6 +68,7 @@
 <build_export_depend>tf2_ros</build_export_depend>
 <build_export_depend>tf2</build_export_depend>
 <build_export_depend>pcl</build_export_depend>
+<build_export_depend>graph_msgs</build_export_depend>
 
 <build_export_depend>pcl_conversions</build_export_depend>
 <build_export_depend>pcl_ros</build_export_depend>
@@ -78,7 +79,7 @@
 <exec_depend>geometry_msgs</exec_depend>
 <exec_depend>pcl</exec_depend>
 <exec_depend>pcl_ros</exec_depend>
-
+<exec_depend>graph_msgs</exec_depend>
 <exec_depend>pcl_conversions</exec_depend>
 <exec_depend>tf2_ros</exec_depend>
 <exec_depend>tf2</exec_depend>
