--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ env:
 
 # Install system dependencies
 before_install:
+  - git submodule update --init --recursive
   - sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
   - sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
   - sudo apt-get update -qq
@@ -46,7 +47,7 @@ install:
   - cd ~/catkin_ws
   - catkin_make
   - source devel/setup.bash
-  # Add the package under integration to the workspace using a symlink.
+  # Add the packages under integration to the workspace using a symlink.
   - cd ~/catkin_ws/src
   - ln -s $CI_SOURCE_PATH .
 
