--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,12 @@ env:
 
 # Install system dependencies
 before_install:
-  - git submodule update --init --recursive
   - sudo sh -c "echo \"deb http://packages.ros.org/ros/ubuntu $ROS_CI_DESKTOP main\" > /etc/apt/sources.list.d/ros-latest.list"
   - sudo apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
   - sudo apt-get update -qq
   - sudo apt-get install dpkg
   - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-desktop-full ros-$ROS_DISTRO-rosserial ros-$ROS_DISTRO-rosserial-arduino ros-$ROS_DISTRO-apriltag-ros 
-  - sudo apt-get install -y ros-$ROS_DISTRO-teleop-twist-keyboard ros-$ROS_DISTRO-move-base libfftw3-dev libqt5charts5-dev ros-$ROS_DISTRO-octomap ros-$ROS_DISTRO-octomap-msgs
+  - sudo apt-get install -y ros-$ROS_DISTRO-teleop-twist-keyboard ros-$ROS_DISTRO-move-base libfftw3-dev libqt5charts5-dev ros-$ROS_DISTRO-octomap ros-$ROS_DISTRO-octomap-msgs ros-$ROS_DISTRO-graph-msgs
   - source /opt/ros/$ROS_DISTRO/setup.bash
 
 # Create a catkin workspace with the package under integration.
