--- a/loam_velodyne/src/lib/CMakeLists.txt
+++ b/loam_velodyne/src/lib/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(loam
             BasicLaserMapping.cpp
             TransformMaintenance.cpp
             BasicTransformMaintenance.cpp)
-target_link_libraries(loam ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+target_link_libraries(loam ${catkin_LIBRARIES} ${PCL_LIBRARIES}  Eigen3::Eigen )
