--- a/lidar_frontier3d/CMakeLists.txt
+++ b/lidar_frontier3d/CMakeLists.txt
@@ -56,11 +56,11 @@ find_package (PCL REQUIRED COMPONENTS io common visualization)
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES   
-  frontier_request.srv
+# add_service_files(
+#   FILES
+#   Service1.srv
 #   Service2.srv
-)
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -70,10 +70,10 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  sensor_msgs  # Or other packages containing msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
