--- a/ugv_obstacle_avoidance/package.xml
+++ b/ugv_obstacle_avoidance/package.xml
@@ -60,6 +60,7 @@
 <build_depend>pcl_conversions</build_depend>
 <build_depend>tf2_ros</build_depend>
 <build_depend>tf2</build_depend>
+<build_depend>lidar_frontier3d</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -70,6 +71,9 @@
 <build_export_depend>pcl</build_export_depend>
 <build_export_depend>graph_msgs</build_export_depend>
 
+<build_export_depend>lidar_frontier3d</build_export_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 <build_export_depend>pcl_conversions</build_export_depend>
 <build_export_depend>pcl_ros</build_export_depend>
   <exec_depend>roscpp</exec_depend>
@@ -83,6 +87,8 @@
 <exec_depend>pcl_conversions</exec_depend>
 <exec_depend>tf2_ros</exec_depend>
 <exec_depend>tf2</exec_depend>
+
+<exec_depend>lidar_frontier3d</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
