--- a/exploration_goal/CMakeLists.txt
+++ b/exploration_goal/CMakeLists.txt
@@ -61,7 +61,9 @@ target_link_libraries(graph_visualization
   Eigen3::Eigen
 )
 
-
+add_dependencies(global_graph_debug ${catkin_EXPORTED_TARGETS})
+add_dependencies(exploration_goal ${catkin_EXPORTED_TARGETS})
+add_dependencies(graph_visualization ${catkin_EXPORTED_TARGETS})
 
 #############
 ## Testing ##
