--- a/rgbd_object_detection/darknet_ros/darknet_ros/CMakeLists.txt
+++ b/rgbd_object_detection/darknet_ros/darknet_ros/CMakeLists.txt
@@ -47,7 +47,8 @@ endif ( X11_FOUND )
 
 # Find rquired packeges
 find_package(Boost REQUIRED COMPONENTS thread)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 3.2.0 REQUIRED)
+message("OpenCV version: ${OpenCV_VERSION}")
 include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(catkin REQUIRED
   COMPONENTS
